syntax = "proto3";

package envoy.extensions.wildcard.virtual_ip_cache.v3;

import "envoy/config/core/v3/address.proto";

import "udpa/annotations/status.proto";
import "validate/validate.proto";

option java_package = "io.envoyproxy.envoy.extensions.wildcard.virtual_ip_cache.v3";
option java_outer_classname = "VirtualIpCacheProto";
option java_multiple_files = true;
option go_package = "github.com/envoyproxy/go-control-plane/envoy/extensions/wildcard/virtual_ip_cache/v3;virtual_ip_cachev3";
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: Virtual IP Cache]
// Virtual IP Cache Manager for wildcard DNS gateway.
//
// [#extension: envoy.bootstrap.virtual_ip_cache]

message VirtualIpCache {
  // CIDR block to allocate virtual IPs from.
  // Virtual IPs are allocated sequentially within this CIDR block.
  //
  // Example: "100.80.0.0/16" allocates IPs from 100.80.0.1 to 100.80.255.254
  config.core.v3.CidrRange cidr_block = 1 [(validate.rules).message = {required: true}];
}
